1999-05-07  Jim Kingdon  <http://www.cyclic.com>

	* server.c (server_notify): Also set last_node to NULL.
	* sanity.sh (server): New tests server-6 and server-7, for this.

1999-05-05  Jim Kingdon  <http://www.cyclic.com>

	* rcs.c (rcs_internal_lockfile): Remove unused variable lockfile.

	* add.c (add): Look for directories with the same name in a
	different case where appropriate (analogous to fopen_case).
	In client code, add comment about how this doesn't do quite
	everything.

1999-05-03  Jim Meyering  <meyering@ascend.com>

	Remove rcs-style ,file, lock files upon signal.
	* rcs.c (rcs_lockfile): New file-scoped global.
	(rcs_cleanup): New function (similar to patch_cleanup).
	(rcs_internal_lockfile): Register rcs_cleanup the first time this
	function is called.  Rename uses of local `lockfile' to refer to new
	global, `rcs_lockfile'.  Don't free the lock file name string, now
	that it's global.
	(rcs_internal_unlockfile): Rename `lockfile', as above, and carefully
	free and NULL-out the global, rcs_lockfile.

1999-04-30  Jim Kingdon  <http://www.cyclic.com>

	* rcs.c (annotate_fileproc): Don't cast NULL in passing it to
	RCS_deltas.  Because there is a prototype in scope the cast is
	unnecessary (per HACKING's ANSI C or SunOS4 rule), and in fact it
	was causing failures on UNICOS because it cast to size_t instead
	of size_t*.  (Thanks to Dean Kopesky for reporting this).

1999-04-29  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh: If invoked without any arguments, print a usage
	message (thanks to Pavel Roskin for a report/patch).

	* run.c (piped_child): Make the error messages more verbose.
	(close_on_exec): Reindent.
	* sanity.sh (devcom3): Several errors are possible in devcom3-9a.
	Adjust for change to piped_child error message.

1999-04-28  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (devcom3): Add some tests of the CVS/Notify file and
	disconnected "cvs edit".

	* main.c (opt_usage): Remove -b.

1999-04-20 Derek Price